--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Bees -- Folklore'
 - !lcc 'PZ'
 - !lcc 'PT'
+- GITenberg
 title: Die Biene Maja und ihre Abenteuer
 url: http://www.gutenberg.org/ebooks/21021
